<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Live Notes</string>
    <string name="action_settings">Settings</string>

    <string name="label_signup">Not a Existing User? SignUp</string>
    <string name="label_userId">User ID</string>
    <string name="label_password">Password</string>
    <string name="label_NotesName">Name…</string>
    <string name="label_NotesContent">(E.g)Content…</string>
    <string name="label_name">Name</string>
    <string name="label_phoneNumber">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="label_reenterpassword">Re-Enter Password</string>

    <string name="button_login">Login</string>
    <string name="button_Add">ADD NOTES</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_signup">Signup</string>


    <string name="desc_profile_picture">Profile Picture</string>
    <string name="desc_app_icon">App Icon</string>


    <string name="alert_userName_empty">User Name Required</string>
    <string name="alert_password_required">Password Required</string>
    <string name="alert_common">Oops something went wrong</string>
    <string name="alert_mail_required">MailId Required</string>
    <string name="alert_password_mismatch">Password Mismatch</string>

</resources>
