<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
                name="data"
                type="com.example.esamohammed.mvvm.model.api.dto.request.LoginRequest"/>
        <variable
                name="listener"
                type="com.example.esamohammed.mvvm.viewModel.activity.LoginViewModel"/>


    </data>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            style="@style/backgroundStyle"
            android:layout_height="match_parent">


        <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtUserId"
                android:src="@drawable/ic_android"
                android:contentDescription="@string/desc_app_icon"
                android:layout_height="wrap_content"/>


        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtUserId"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:text="@={listener.loginLiveData.userId}"
                android:hint="@string/label_userId"
                style="@style/edtFieldStyle"
                android:layout_height="wrap_content"/>


        <android.support.v7.widget.AppCompatEditText
                app:layout_constraintTop_toBottomOf="@+id/txtUserId"
                android:inputType="textPassword"
                style="@style/edtFieldStyle"
                android:hint="@string/label_password"
                android:id="@+id/txtPassword"
                android:text="@={listener.loginLiveData.password}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btnSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtHintSignUp"
                style="@style/ButtonPrimaryStyle"
                android:text="@string/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/label_signup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txtHintSignUp"
                android:onClick="@{()->listener.notExistingUser()}"
                style="@style/txtContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </android.support.constraint.ConstraintLayout>

</layout>
